[package]
edition = "2021"
name = "mentat_web"
version = "0.0.2"


# Forward mentat's features.
[features]
default = ["bundled_sqlite3", "syncable"]
sqlcipher = ["mentat/sqlcipher"]
bundled_sqlite3 = ["mentat/bundled_sqlite3"]
syncable = ["mentat/syncable"]

#[lib]
#name = "mentat_cli"
#path = "src/mentat_cli/lib.rs"

[[bin]]
name = "mentat_web"
doc = false
test = false

[dependencies]
actix-web = "4"
serde = { version = "~1.0", features = ["derive"] }
serde_json = "1"


[dependencies.rusqlite]
version = "~0.26"
features = ["limits", "bundled"]

[dependencies.mentat]
path = "../.."
default-features = false

[dependencies.edn]
path = "../../edn"

[dependencies.core_traits]
path = "../../core-traits"

[dependencies.mentat_db]
path = "../../db"
