[package]
name = "neon-menat"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
mentat = { path = "../../.." }
chrono = "0.4.19"

[dependencies.uuid]
version = "1.0.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6", "event-queue-api", "try-catch-api"]

[dependencies.rusqlite]
version = "~0.26"
features = ["limits", "bundled"]


