[package]
edition = "2021"
name = "neon-menat"
version = "0.1.0"
license = "ISC"

exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mentat = { path = "../../../../" }

[workspace]

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
